--- a/Code/package.json
+++ b/Code/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.0.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-graph-vis": "^1.0.2",
     "react-scripts": "2.1.1",
     "typescript": "3.2.2"
   },
@@ -26,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
