--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+build
+
 # Created by https://www.gitignore.io/api/node,macos,linux,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,macos,linux,windows,visualstudiocode
 
