--- a/Code/package.json
+++ b/Code/package.json
@@ -2,6 +2,7 @@
   "name": "hc",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cc-ull.github.io/HC",
   "dependencies": {
     "@types/jest": "23.3.10",
     "@types/node": "10.12.18",
@@ -10,14 +11,16 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-graph-vis": "^1.0.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "typescript": "3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,6 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0"
   }
 }
