--- a/Code/package.json
+++ b/Code/package.json
@@ -2,7 +2,7 @@
   "name": "hc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cc-ull.github.io/HC",
+  "homepage": "https://hamiltonian-circuit-npc.herokuapp.com/",
   "dependencies": {
     "@types/jest": "23.3.10",
     "@types/node": "10.12.18",
