--- a/HC_2223_Project/HC_2223_Project.csproj
+++ b/HC_2223_Project/HC_2223_Project.csproj
@@ -35,5 +35,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Main.cs" />
+    <Compile Include="Graph.cs" />
+    <Compile Include="VCToHCConverter.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
