--- a/HC_2223_Project/HC_2223_Project.csproj
+++ b/HC_2223_Project/HC_2223_Project.csproj
@@ -40,5 +40,8 @@
     <Compile Include="Graph.cs" />
     <Compile Include="VCToHCConverter.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
