--- a/HC_2223_Project/HC_2223_Project.csproj
+++ b/HC_2223_Project/HC_2223_Project.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="instance1.graph" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
